--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 
 
     <div class="modal-overlay">
-        <form name="feedback_form" autocomplete="cancel" novalidate="off">
+        <form name="feedback_form" autocomplete="off" novalidate>
             <button class = "exit-button" type = "submit">
                 <svg class = "close-menu-icon" width = "8" height = "8">
                     <use href = "./images/icons.svg#icon-close-black-18dp-2-1"></use>
@@ -502,6 +502,18 @@
                         </a>
                     </li>
                 </ul>
+            </div>
+
+            <div class="footer-column-three">
+                <p class = "footer-subscribe-text">Subscribe</p>
+                <form class = "footer-form">
+                    <label class = "email-label">
+                        <input type = "email" name = "footer-email-input" placeholder="E-mail">
+                    </label>
+                    <button class = "subscribe-button">
+                        Subscribe
+                    </button>
+                </form>
             </div>
             
             </div>
