--- a/index.html
+++ b/index.html
@@ -508,10 +508,13 @@
                 <p class = "footer-subscribe-text">Subscribe</p>
                 <form class = "footer-form">
                     <label class = "email-label">
-                        <input type = "email" name = "footer-email-input" placeholder="E-mail">
+                        <input class = "email-input" type = "email" name = "footer-email-input" placeholder="E-mail">
                     </label>
-                    <button class = "subscribe-button">
+                    <button class = "subscribe-button" type = "submit">
                         Subscribe
+                        <svg class = "send-icon" width = "24" height = "24">
+                            <use href = "./images/icons.svg#icon-icon-send"></use>
+                        </svg>
                     </button>
                 </form>
             </div>
