--- a/index.html
+++ b/index.html
@@ -458,16 +458,13 @@
 
             <form>
                 <div class="form-container">
-                    <label class = "form-label" for = "user-name">
-                        Name
-                        <div class="input-container">
-                            <input type = "text" name = "username" />
-                            <svg class = "input-icon" width = "18" height = "24">
-                                <use href = "./images/icons.svg#icon-person-black-18dp-1-2"></use>
-                            </svg>
-                        </div>
-                        
-                    </label>
+                    <label class = "name-label" for = "user-name">Name</label>
+                    <div class="input-container">
+                        <input class = "name-text-container" type = "text" name = "user-name" id = "user-name"/>
+                        <svg class = "input-icon" width = "18" height = "24">
+                            <use href = "./images/icons.svg#icon-person-black-18dp-1-2"></use>
+                        </svg>
+                    </div>
         
                     <label class = "form-label">
                         Phone
