--- a/index.html
+++ b/index.html
@@ -495,10 +495,11 @@
                     
                 <div class="checkbox-class">
                     <input class = "visually-hidden" type = "checkbox" name="user-privacy" id="user-privacy" value = "true">
-                    <label class = "checkbox-container" for="user-privacy">I accept the term and conditions of the
+                    <label class = "checkbox-container" for="user-privacy">
+                        I accept the terms and conditions of the
                         <span class = "checkmark">
-                            <svg class = "vector-class" width = "10px" height = "8px">
-                                <use href = "images/icons.svg#icon-Vector"></use>
+                            <svg class = "vector-class" width = "10" height = "8">
+                                <use href = "./images/icons.svg#icon-Vector"></use>
                             </svg>
                         </span>
                         <a class = "terms-link" href = "./index.html">Privacy Policy</a>
