--- a/index.html
+++ b/index.html
@@ -494,14 +494,15 @@
                 </div>
                     
                 <div class="checkbox-class">
-                    <input class = "visually-hidden" type = "checkbox" name="user-privacy" id="user-privacy" value = "true">
+                    <input class = "visually-hidden checkbox-input" type = "checkbox" name="user-privacy" id="user-privacy" value = "true">
                     <label class = "checkbox-container" for="user-privacy">
-                        I accept the terms and conditions of the
+                        
                         <span class = "checkmark">
                             <svg class = "vector-class" width = "10" height = "8">
                                 <use href = "./images/icons.svg#icon-Vector"></use>
                             </svg>
                         </span>
+                        I accept the terms and conditions of the
                         <a class = "terms-link" href = "./index.html">Privacy Policy</a>
                     </label>    
                 </div>  
